--- a/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
+++ b/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
@@ -1,6 +1,5 @@
 ---
 
    - name: Actualizamos máquinas a último nivel
-     dnf:
-      name: "*"
-      state: latest
+      become: yes
+      command: dnf update -y
