--- a/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
+++ b/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
@@ -2,4 +2,4 @@
 
    - name: Actualizamos máquinas a último nivel
      become: yes
-     command: dnf update -y
+     command: dnf update -y --allowerasing
