--- a/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
+++ b/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
@@ -1,21 +1,7 @@
 ---
-- hosts: all
-  become: true
 
-  tasks:
-
-  - name: Actualizar paquetes del sistema operativo
-    dnf:
-      name: "*"
-      state: latest
-
-  - name: Instalar paquete nfs-utils, nfs4-acl-tools, wget, net-tools, chrony
-    dnf:
-      name: "{{ item }}"
-      state: latest
-    loop:
-      - nfs-utils
-      - nfs4-acl-tools
-      - wget
-      - net-tools
-      - chrony
+   - name: Actualizamos máquinas a último nivel
+     dnf:
+       name: "*"
+       state: present
+     when: ansible_os_family == "RedHat"
