--- a/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
+++ b/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
@@ -3,6 +3,12 @@
    - name: Estableciendo Zona Horaria
      timezone: 
        name: Europe/Madrid
+       
+   - name: add the /etc/yum.repos.d/epel.repo
+     yum_repository:
+      name: epel
+      description: EPEL repo
+      baseurl: https://download.fedoraproject.org/pub/epel/$releasever/$basearch/
     
    - name: limpiar cache dnf
      become: yes
