--- a/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
+++ b/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
@@ -4,7 +4,7 @@
      timezone: 
        name: Europe/Madrid
        
-   - name: Agregar repositorio de kubernetes
+   - name: Kubernetes repo
      blockinfile:
       create: yes
       path: /etc/yum.repos.d/kubernetes.repo
