--- a/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
+++ b/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
@@ -37,3 +37,11 @@
        state: latest
      become: yes
      when: ansible_os_family == "RedHat"
+     
+
+   - name: Instalar Chrony
+     dnf:
+       name: chrony
+       state: latest
+     become: yes
+
