--- a/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
+++ b/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
@@ -59,4 +59,8 @@
        - wget
        - nfs-utils
        - nfs4-acl-tools
-
+   
+   - name: Desactivando Selinux
+     become: yes
+     selinux:
+       state: disabled
