--- a/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
+++ b/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
@@ -59,6 +59,7 @@
        - wget
        - nfs-utils
        - nfs4-acl-tools
+       - net-tools
    
    - name: Desactivando Selinux
      become: yes
