--- a/ansible/roles/tareascomunes/tasks/01-tareas-comunes-k8s.yaml
+++ b/ansible/roles/tareascomunes/tasks/01-tareas-comunes-k8s.yaml
@@ -1,6 +1,6 @@
 ---
   
-   - name: Configurando etc/hosts
+   - name: Configurando /etc/hosts
      copy:
       src: ficheros/hosts
       dest: /etc/hosts
@@ -26,3 +26,10 @@
        name: firewalld
        state: started
        enabled: yes
+
+   - name: Configurando /etc/sysctl.d/k8s.conf
+     copy:
+      src: ficheros/k8s.conf
+      dest: /etc/sysctl.d/k8s.conf
+      mode: u=rw,g=r,o=r
+     command: sysctl --system
