--- a/ansible/roles/tareascomunes/tasks/01-tareas-comunes-k8s.yaml
+++ b/ansible/roles/tareascomunes/tasks/01-tareas-comunes-k8s.yaml
@@ -32,4 +32,7 @@
       src: ficheros/k8s.conf
       dest: /etc/sysctl.d/k8s.conf
       mode: u=rw,g=r,o=r
+
+   - name: Aplicando /etc/sysctl.d/k8s.conf
+     become: yes
      command: sysctl --system
