--- a/ansible/roles/tareascomunes/tasks/01-tareas-comunes-k8s.yaml
+++ b/ansible/roles/tareascomunes/tasks/01-tareas-comunes-k8s.yaml
@@ -36,3 +36,11 @@
    - name: Aplicando /etc/sysctl.d/k8s.conf
      become: yes
      command: sysctl --system
+
+   - name: Deshabilitando Swap
+     become: yes
+     command: swapoff -a
+
+   - name: Eliminando Swap del fichero /etc/fstab
+     become: yes
+     command: sed -i '/swap/d' /etc/fstab
