--- a/ansible/roles/tareascomunes/tasks/01-tareas-comunes-k8s.yaml
+++ b/ansible/roles/tareascomunes/tasks/01-tareas-comunes-k8s.yaml
@@ -42,5 +42,7 @@
      command: swapoff -a
 
    - name: Eliminando Swap del fichero /etc/fstab
-     become: yes
-     command: sed -i '/swap/d' /etc/fstab
+     replace:
+      path: /etc/fstab
+      regexp: '^([^#].*?\sswap\s+sw\s+.*)$'
+      replace: '# \1'
