--- a/ansible/roles/tareascomunes/tasks/01-tareas-comunes-k8s.yaml
+++ b/ansible/roles/tareascomunes/tasks/01-tareas-comunes-k8s.yaml
@@ -48,5 +48,13 @@
       replace: '# \1'
 
    - name: Repos para CRI-O
-     command: wget -O /etc/yum.repos.d/devel:kubic:libcontainers:stable.repo https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/CentOS_8_Stream/devel:kubic:libcontainers:stable.repo
-     command: wget -O /etc/yum.repos.d/devel:kubic:libcontainers:stable:cri-o:1.23:1.23.1.repo https://download.opensuse.org/repositories/devel:kubic:libcontainers:stable:cri-o:1.23:1.23.1/CentOS_8_Stream/devel:kubic:libcontainers:stable:cri-o:1.23:1.23.1.repo
+     become: yes
+     get_utl: 
+       url: https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/CentOS_8_Stream/devel:kubic:libcontainers:stable.repo
+       dest: /etc/yum.repos.d/devel:kubic:libcontainers:stable.repo
+
+   - name: Repos para CRI-O
+     become: yes
+     get_utl: 
+       url: https://download.opensuse.org/repositories/devel:kubic:libcontainers:stable:cri-o:1.23:1.23.1/CentOS_8_Stream/devel:kubic:libcontainers:stable:cri-o:1.23:1.23.1.repo
+       dest: /etc/yum.repos.d/devel:kubic:libcontainers:stable:cri-o:1.23:1.23.1.repo
