root kube config

--- a/ansible/roles/nfs/tasks/01-nfs.yaml
+++ b/ansible/roles/nfs/tasks/01-nfs.yaml
@@ -6,7 +6,7 @@
        state: started
        enabled: yes
 
-   - name: Creando dir 
+   - name: Creando dir /srv/nfs
      file:
        path: /srv/nfs
        state: directory
