--- a/ansible/roles/tareasmaster/tasks/01-tareas-master.yaml
+++ b/ansible/roles/tareasmaster/tasks/01-tareas-master.yaml
@@ -47,5 +47,6 @@
      copy:
       src: /etc/kubernetes/admin.conf
       dest: /root/.kube/config
+      remote_src: yes
       owner: root
       mode: u=rw,g=r,o=r
