--- a/ansible/roles/tareasmaster/tasks/01-tareas-master.yaml
+++ b/ansible/roles/tareasmaster/tasks/01-tareas-master.yaml
@@ -20,6 +20,14 @@
        state: reloaded
        enabled: yes
 
+   - name: Refresh preventivo Kubeadm
+     become: yes
+     command: kubeadm reset
+
+   - name: Restart preventivo kubelet
+     become: yes
+     command: systemctl restart kubelet
+
    - name: CNI y red PODs
      become: yes
      command: kubeadm init --pod-network-cidr 192.169.0.0/16
