--- a/ansible/roles/tareascomunes/tasks/01-tareas-comunes-k8s.yaml
+++ b/ansible/roles/tareascomunes/tasks/01-tareas-comunes-k8s.yaml
@@ -1,4 +1,17 @@
 ---
+
+   - name: Kubernetes repo
+     blockinfile:
+      create: yes
+      path: /etc/yum.repos.d/kubernetes.repo
+      block: |
+            [kubernetes]
+            baseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
+            enabled=1
+            gpgcheck=1
+            repo_gpgcheck=1
+            gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg            
+            exclude=kubelet kubeadm kubectl
   
    - name: Configurando /etc/hosts
      copy:
