--- a/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
+++ b/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
@@ -2,31 +2,17 @@
   
    - name: Estableciendo Zona Horaria
      timezone: 
-       name: Europe/Madrid
-
-# aunque en los apuntes esto se indica que se haga más adelante, he preferido ponerlo aquí   
-   - name: Kubernetes repo
-     blockinfile:
-      create: yes
-      path: /etc/yum.repos.d/kubernetes.repo
-      block: |
-            [kubernetes]
-            baseurl=https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
-            enabled=1
-            gpgcheck=1
-            repo_gpgcheck=1
-            gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg            
-            exclude=kubelet kubeadm kubectl 
+       name: Europe/Madrid 
             
    # Las siguientes tareas las meto aunque no he visto que se hable de ello ni en el foro ni en las clases, pero a mí me ha dado problema el hacer el update
    # de las máquinas a último nivel sin meter esto previamente.
-   - name: limpiar cache dnf
-     become: yes
-     command: dnf clean all
+  #  - name: limpiar cache dnf
+  #    become: yes
+  #    command: dnf clean all
 
-   - name: check dnf
-     become: yes
-     command: dnf check
+  #  - name: check dnf
+  #    become: yes
+  #    command: dnf check
 
    - name: Actualizamos máquinas a último nivel
      dnf:
