--- a/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
+++ b/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
@@ -6,17 +6,17 @@
             
    # Las siguientes tareas las meto aunque no he visto que se hable de ello ni en el foro ni en las clases, pero a mí me ha dado problema el hacer el update
    # de las máquinas a último nivel sin meter esto previamente.
-   - name: limpiar cache dnf
-     become: yes
-     command: dnf clean all
+  #  - name: limpiar cache dnf
+  #    become: yes
+  #    command: dnf clean all
 
-   - name: check dnf
-     become: yes
-     command: dnf check
+  #  - name: check dnf
+  #    become: yes
+  #    command: dnf check
 
-   - name: Actualizamos máquinas a último nivel
-     become: yes
-     command: dnf update -y
+  #  - name: Actualizamos máquinas a último nivel
+  #    become: yes
+  #    command: dnf update -y
 
   #  - name: Actualizamos máquinas a último nivel
   #    dnf:
@@ -26,10 +26,11 @@
   #    when: ansible_os_family == "RedHat"
      
 
-   - name: Instalar Chrony
+   - name: Instalar Chrony y Actualizamos máquinas a último nivel
      dnf:
        name: chrony
        state: latest
+       update_cache: yes
      become: yes
 
    - name: Activar Chrony
