--- a/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
+++ b/ansible/roles/tareasprevias/tasks/01-tareas-previas.yaml
@@ -21,7 +21,7 @@
    - name: Actualizamos máquinas a último nivel
      dnf:
        name: "*"
-       state: present
+       state: latest
      become: yes
      when: ansible_os_family == "RedHat"
      
