--- a/ansible/roles/tareasmaster/tasks/01-tareas-master.yaml
+++ b/ansible/roles/tareasmaster/tasks/01-tareas-master.yaml
@@ -55,4 +55,4 @@
 
    - name: Dando permisos
      become: yes
-     command: chown $(id -u):$(id -g) /root/.kube/config
+     command: chown root:root /root/.kube/config
