--- a/ansible/roles/ingress/tasks/01-ingress.yaml
+++ b/ansible/roles/ingress/tasks/01-ingress.yaml
@@ -1,6 +1,6 @@
 ---
   
-   - name: Aplicando config nfs 
+   - name: Aplicando haproxy-ingress.yaml
      become: yes
      command: kubectl apply -f https://raw.githubusercontent.com/haproxytech/kubernetes-ingress/master/deploy/haproxy-ingress.yaml
 
