--- a/ansible/roles/tareasmaster/tasks/00-puertos.yaml
+++ b/ansible/roles/tareasmaster/tasks/00-puertos.yaml
@@ -10,3 +10,10 @@
       - 2379-2380/tcp
       - 10250-10252/tcp
       - 10255/tcp
+
+# reloaded mejor que restarted para que recargue la configuración
+   - name: Reload Firewall 
+     service:
+       name: firewalld
+       state: reloaded
+       enabled: yes
