--- a/ansible/roles/tareasworkers/tasks/00-puertos.yaml
+++ b/ansible/roles/tareasworkers/tasks/00-puertos.yaml
@@ -1,17 +1,16 @@
----
+--- 
 
-   - name: Abriendo puertos para K8s 
-     firewalld: 
-       port: "{{ item }}"
-       permanent: true
-       state: enabled
-     loop:
-      - 10250/tcp
-      - 30000-32767/tcp
-
-# reloaded mejor que restarted para que recargue la configuración
-   - name: Reload Firewall 
-     service:
-       name: firewalld
-       state: reloaded
-       enabled: yes
+- name: "Abriendo puertos para K8s"
+  firewalld: 
+    permanent: true
+    port: "{{ item }}"
+    state: enabled
+  loop: 
+    - 10250/tcp
+    - 30000-32767/tcp
+  
+- name: "Reload Firewall"
+  service: 
+    enabled: true
+    name: firewalld
+    state: reloaded
