--- a/ansible/roles/tareasworkers/tasks/01-tareas-workers.yaml
+++ b/ansible/roles/tareasworkers/tasks/01-tareas-workers.yaml
@@ -1,1 +1,14 @@
 ---
+
+- name: Obtenemos el join comand del nodo Master
+  delegate_to: "{{ groups['master'][0] }}"
+  command: kubeadm token create --print-join-command
+  register: join_command
+
+- name: Mostramos comando
+  debug:
+    msg: "{{ join_command.stdout }}"
+
+- name: Ejecutamos comando
+  become: yes
+  command: "{{ join_command.stdout }}"
