--- a/ansible/roles/tareasworkers/tasks/01-tareas-workers.yaml
+++ b/ansible/roles/tareasworkers/tasks/01-tareas-workers.yaml
@@ -3,12 +3,12 @@
 - name: Obtenemos el join comand del nodo Master
   delegate_to: "{{ groups['master'][0] }}"
   command: kubeadm token create --print-join-command
-  register: comando-join
+  register: join_command
 
 - name: Mostramos comando
   debug:
-    msg: "{{ comando-join.stdout }}"
+    msg: "{{ join_command.stdout }}"
 
 - name: Ejecutamos comando
   become: yes
-  command: "{{ comando-join.stdout }} --ignore-preflight-errors=all"
+  command: "{{ join_command.stdout }} --ignore-preflight-errors=all"
