--- a/ansible/roles/tareasworkers/tasks/01-tareas-workers.yaml
+++ b/ansible/roles/tareasworkers/tasks/01-tareas-workers.yaml
@@ -1,14 +1,45 @@
 ---
 
-- name: Obtenemos el join comand del nodo Master
-  delegate_to: "{{ groups['master'][0] }}"
-  command: kubeadm token create --print-join-command
-  register: join_command
+# - name: Obtenemos el join comand del nodo Master
+#   delegate_to: "{{ groups['master'][0] }}"
+#   command: kubeadm token create --print-join-command
+#   register: join_command
 
-- name: Mostramos comando
-  debug:
-    msg: "{{ join_command.stdout }}"
+# - name: Mostramos comando
+#   debug:
+#     msg: "{{ join_command.stdout }}"
 
-- name: Ejecutamos comando
+# - name: Ejecutamos comando
+#   become: yes
+#   command: "{{ join_command.stdout }} --ignore-preflight-errors=all"
+
+
+- hosts: master
   become: yes
-  command: "{{ join_command.stdout }} --ignore-preflight-errors=all"
+  gather_facts: false
+
+  tasks:
+
+  - name: Creamos un nuevo token para el Cluster-Join
+    command: kubeadm token create --print-join-command
+    register: join_command
+  
+  - debug:
+      var: join_command
+  
+  - name: set join command
+    set_fact:
+      join_command: "{{ join_command.stdout_lines[0] }}"
+
+
+- hosts: workers
+  become: yes
+
+  tasks:
+    
+  - name: Agregamos workers al cluster
+    become: yes
+    shell: "{{ hostvars['master'].join_command }} >> salida_join.txt"
+    args:
+      chdir: /home/adminUsername
+      creates: salida_join.txt
