--- a/ansible/roles/tareasmaster/tasks/00-puertos.yaml
+++ b/ansible/roles/tareasmaster/tasks/00-puertos.yaml
@@ -1,19 +1,18 @@
 ---
 
-   - name: Abriendo puertos para K8s 
-     firewalld: 
-       port: "{{ item }}"
-       permanent: true
-       state: enabled
-     loop:
-      - 6443/tcp
-      - 2379-2380/tcp
-      - 10250-10252/tcp
-      - 10255/tcp
-
-# # reloaded mejor que restarted para que recargue la configuración
-#    - name: Reload Firewall 
-#      service:
-#        name: firewalld
-#        state: reloaded
-#        enabled: yes
+- name: "Abriendo puertos para K8s"
+  firewalld: 
+    permanent: true
+    port: "{{ item }}"
+    state: enabled
+  loop: 
+    - 6443/tcp
+    - 2379-2380/tcp
+    - 10250-10252/tcp
+    - 10255/tcp
+  
+# - name: "Reload Firewall"
+#   service: 
+#     enabled: true
+#     name: firewalld
+#     state: reloaded
